--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,13 +1,20 @@
-name: Generate Snake Files
+name: Generate Snake
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: 0 0 * * *
+      # every 12 hours
+    - cron: "0 */12 * * *"
+
+  workflow_dispatch:
+
+  push:
+    branches:
+    - main
 
 jobs:
-  generate-snake-files:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
